--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                </div>
             </section>
          </div>
-         <div class="tabs__content scndTab">
+         <div class="tabs__content scndTab hidden">
             <div class="container">
                <div class="recs__container">
                   <iframe src="recs.html"
@@ -195,7 +195,7 @@
                </div>
             </div>
          </div>
-         <div class="tabs__content thrdTab">
+         <div class="tabs__content thrdTab hidden">
             <div class="container">
                <div class="grammar__navigation">
                   <span>Темы</span>
@@ -463,7 +463,7 @@
                </div>
             </div>
          </div>
-         <div class="tabs__content fourthTab">
+         <div class="tabs__content fourthTab hidden">
             <section class="resources">
                <div class="container">
                   <div class="resource__category">
@@ -580,8 +580,7 @@
          <img class="footer__logo" src="img/full_logo.png" alt="English_itself">
       </footer>
    </div>
-
+   <script src="js/script.js"></script>
 </body>
-<script src="js/script.js"></script>
 
 </html>
