--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <section class="introduction">
                <div class="container introCont">
                   <img class="introduction__photo" src="img/image_of_me.jpg" alt="photo">
-                  <span class="introduction__text">Привет! Меня зовут Данил и я тот, кто прошел тот путь,
-                     который ты, вероятно, начинаешь. Здесь ты можешь найти полезные статьи, справочные
+                  <span class="introduction__text">Привет! Меня зовут Данил и я тот, кто так же как и ты любит
+                     иностранные языки, поэтому я создал этот сайт. Здесь ты можешь найти полезные статьи, справочные
                      материалы, планы и множество других
                      вещей, которые помогут тебе в твоем нелегком начинании.</span>
                </div>
@@ -574,6 +574,9 @@
             </section>
          </div>
       </div>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Merriweather:400,900,900i" rel="stylesheet">
+      <a id="button"></a>
       <footer class="footer">
          <img class="footer__logo" src="img/full_logo.png" alt="English_itself">
       </footer>
