--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
    <meta charset="UTF-8">
@@ -13,7 +13,6 @@
       rel="stylesheet">
    <link rel="icon" href="img/logo.png" type="image/png">
    <title>English_itself</title>
-   <link rel="import" href="grammar.html" />
 </head>
 
 <body>
@@ -44,10 +43,11 @@
             <section class="introduction">
                <div class="container introCont">
                   <img class="introduction__photo" src="img/image_of_me.jpg" alt="photo">
-                  <span class="introduction__text">Привет! Меня зовут Данил и я тот, кто так же как и ты любит
-                     иностранные языки, поэтому я создал этот сайт. Здесь ты можешь найти полезные статьи, справочные
-                     материалы, планы и множество других
-                     вещей, которые помогут тебе в твоем нелегком начинании.</span>
+                  <span class="introduction__text">
+                     Привет! Меня зовут Данил и я тот, кто так же как и ты любит иностранные языки, поэтому я создал
+                     этот сайт. Здесь ты можешь найти полезные статьи, справочные материалы, планы и множество других
+                     вещей, которые помогут тебе в твоем нелегком начинании.
+                  </span>
                </div>
             </section>
             <section class="reasons">
@@ -575,8 +575,7 @@
          </div>
       </div>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-      <link href="https://fonts.googleapis.com/css?family=Merriweather:400,900,900i" rel="stylesheet">
-      <a id="button"></a>
+      <a id="button" clss="bckToTop"></a>
       <footer class="footer">
          <img class="footer__logo" src="img/full_logo.png" alt="English_itself">
       </footer>
