--- a/recs.html
+++ b/recs.html
@@ -3,23 +3,25 @@
       <h1>О том, что наиболее важно для начинающих</h1>
       Существует идея о том, что прежде, чем за что-то взяться, стоит сначала подумать о том, для чего вам это нужно,
       оценить свои возможности, потенциальную пользу и потенциальные последствия. Так вот, эта идея лежит в основе всего
-      учения в целом. Все мы помним школу, ответьте себе на вопрос: сколько того, что вы там изучали, вы действительно
+      учения в целом. Все мы помним школу, ответьте себе на вопрос: сколько из того, что вы там изучали, вы
+      действительно
       помните и сможете в последствии использовать? Думаю, процент не высок. А ведь у всех в перечень школьных дисциплин
       входил английский язык, но далеко не все в итоге могут хоть как-то на нем изъясняться, не говоря уже о том, чтобы
       использовать его в общении и работе. Причин много, но главная заключается в том, что ученики попросту не осознают
-      его пользу и зачастую теряют мотивацию, а те немногие, кто ее сохраняет, чаще всего встречаются с машиной системы
-      образования, не дающей никаких эффективных методов и способов к изучению языка и улучшению навыков. На школу
+      его пользу и зачастую теряют <b>мотивацию</b>, а те немногие, кто ее сохраняет, чаще всего встречаются с машиной
+      системы образования, не дающей никаких эффективных методов и способов к изучению языка и улучшению навыков. На
+      школу
       рассчитывать чаще всего не приходится. Главный тезис здесь в том, что наиважнейшим шагом в изучении не только
       английского, но и любой другой дисциплины, является определение мотивации.
-      Совет номер 1 – постарайтесь как можно конкретнее и очевиднее определить, почему и зачем вы хотите изучать
-      язык.
+      <b>Совет номер 1</b> – постарайтесь как можно конкретнее и очевиднее определить, почему и зачем вы хотите изучать
+      язык<br>
       Мотивацией может служить буквально что угодно: общение с иностранцами, путешествия, карьерные перспективы, желание
       ознакомиться с другой культурой или что бы то ни было еще. Некоторые могут подумать, что это не так важно, но это
       большое заблуждение. Мотивация – своего рода топливо для организма и, если вовремя его не заправить, едва ли будет
       возможным заставить его работать. Таким образом, постарайтесь не ограничиваться чем-то вроде «Хочу учить
       английский, потому что это круто/модно/полезно», «Куда сейчас без английского» и подобными вещами, это может
       выглядеть как мотивация, но на таком «топливе» далеко вы не уедете. Важно то, чтобы ваша мотивация была именно
-      вашей, чтобы вы четко понимали чего хотите от изучения и к чему стремитесь.
+      вашей, чтобы вы четко понимали чего хотите от изучения и к чему стремитесь.<br>
       Предположим, что с причинами и мотивацией мы определились, хорошо, что дальше? Дальше нужно понять, с чем мы
       имеем дело – установить, насколько близко или далеко мы от нашей цели. Следующим нашим шагом станет определение
       наших языковых навыков: speaking (говорение), listening (восприятие речи на слух), writing (письмо), reading
