--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                            <li class="grammarTrigger">Фразовый глагол get - часть 2</li>
                            <li class="grammarTrigger">Глагол give</li>
                            <li class="grammarTrigger">Глагол make</li>
+                           <li class="grammarTrigger">Глагол take</li>
                            <li class="grammarTrigger">Глагол bring</li>
                            <li class="grammarTrigger">Глагол look</li>
                            <li class="grammarTrigger">Глагол move</li>
@@ -286,7 +287,7 @@
                      <li><span>Модальные глаголы</span>
                         <ul class="hidden">
                            <li class="grammarTrigger">Модальные глаголы в английском</li>
-                           <li class="grammarTrigger">Модальный глаголм CAN</li>
+                           <li class="grammarTrigger">Модальный глагол CAN</li>
                            <li class="grammarTrigger">Глаголы may и might</li>
                            <li class="grammarTrigger">Глагол must</li>
                            <li class="grammarTrigger">Глагол have to</li>
@@ -296,7 +297,7 @@
                            <li class="grammarTrigger">Глагол shall и should</li>
                            <li class="grammarTrigger">Глагол will</li>
                            <li class="grammarTrigger">Глагол dare</li>
-                           <li class="grammarTrigger">Выражениеhad better</li>
+                           <li class="grammarTrigger">Выражение had better</li>
                         </ul>
                      </li>
                      <li><span>Существительные</span>
