--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                      </li>
                      <li><span>Прилагательные</span>
                         <ul class="hidden midUls">
-                           <li class="grammarTrigger">Прилагательные а английском</li>
+                           <li class="grammarTrigger">Прилагательные в английском</li>
                            <li class="grammarTrigger">Порядок прилагательных</li>
                            <li class="grammarTrigger">Степени сравнения</li>
                            <li class="grammarTrigger">Прилагатальные на -ing и -ed</li>
@@ -406,8 +406,6 @@
                            </li>
                            <li class="grammarTrigger">Порядок слов в английском предложении: word order in English
                               sentence</li>
-                           <li class="grammarTrigger">Порядок слов в английском языке: правила построения предложений
-                           </li>
                            <li class="grammarTrigger">Отрицание в английском языке</li>
                            <li class="grammarTrigger">Безличные предложения в английском языке</li>
                         </ul>
